--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ h1, h2, h3, h4, h5, h6 {
   color: #E9725D;
   text-align: center; }
 
+h1 {
+  text-transform: uppercase; }
+
 h3.frase {
   font-size: 3.5rem;
   text-align: center;
@@ -17,8 +20,8 @@ a {
     color: #5D8B80; }
   a.boton {
     background-color: #EFEBC8;
-    border-radius: 20%;
-    border: solid #5D8B80; }
+    border-radius: 10px;
+    border: solid; }
 
 ul.trabajo {
   list-style-type: none; }
@@ -52,6 +55,61 @@ div.proyectos {
 div.img {
   text-align: center; }
 
+div.valores {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  justify-content: space-evenly; }
+  @media (max-width: 768px) {
+    div.valores {
+      grid-template-columns: repeat(2, 35%); } }
+  @media (max-width: 400px) {
+    div.valores {
+      display: block; } }
+
+div.valores-inf {
+  display: grid;
+  grid-template-columns: repeat(2, 30%);
+  justify-content: space-evenly; }
+  @media (max-width: 400px) {
+    div.valores-inf {
+      display: block; } }
+
+div.img-quienes-somos {
+  text-align: center; }
+
+div.capacitadores {
+  display: grid;
+  grid-template-columns: repeat(8, auto); }
+  div.capacitadores p {
+    text-align: center;
+    font-size: 0.8rem; }
+  div.capacitadores h5 {
+    font-size: 1rem; }
+  div.capacitadores img {
+    border-radius: 50%; }
+  @media (max-width: 992px) {
+    div.capacitadores {
+      grid-template-columns: repeat(6, auto); } }
+  @media (max-width: 768px) {
+    div.capacitadores {
+      grid-template-columns: repeat(5, auto); } }
+  @media (max-width: 576px) {
+    div.capacitadores {
+      grid-template-columns: repeat(4, auto); } }
+  @media (max-width: 470px) {
+    div.capacitadores {
+      grid-template-columns: repeat(2, auto); } }
+  @media (max-width: 350px) {
+    div.capacitadores {
+      grid-template-columns: repeat(1, auto); } }
+
+div.img-capacitadores {
+  text-align: center; }
+
+@media (max-width: 371px) {
+  img.logo-navbar {
+    width: 150px; } }
+
 img.redonda {
   border-radius: 50%; }
 
@@ -84,12 +142,12 @@ img.py-home {
 nav {
   font-family: "Righteous", cursive;
   color: #E9725D;
-  font-size: 1.15rem; }
+  font-size: 1rem; }
   nav .dropdown-item {
     color: #5D8B80;
     font-family: "Raleway", sans-serif; }
   nav img:hover {
-    width: 72%; }
+    width: 255px; }
 
 footer {
   background-color: #E9725D;
@@ -97,9 +155,10 @@ footer {
   footer nav {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center; }
     footer nav a {
-      padding: 0.7rem 1.5rem 2rem 1.5rem; }
+      padding: 0.7rem 1.2rem 2rem 1.2rem; }
       footer nav a:hover {
         opacity: 0.5; }
   footer h6 {
@@ -110,6 +169,9 @@ footer {
 main.proyectos {
   background-color: #EFEBC8;
   color: #E9725D; }
+
+main.prueba {
+  height: 75vh; }
 
 section {
   margin-top: 3rem;
@@ -125,3 +187,52 @@ section {
   section.iframe {
     background-color: #E9725D;
     padding: 3rem; }
+  section.quienes-somos {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 1rem 2rem 1rem 2rem; }
+    section.quienes-somos .item-derecha {
+      padding-left: 3rem; }
+    section.quienes-somos .item-izquierda {
+      padding-right: 3rem; }
+    @media (max-width: 992px) {
+      section.quienes-somos img {
+        width: 350px; } }
+    @media (max-width: 768px) {
+      section.quienes-somos {
+        flex-direction: column; }
+        section.quienes-somos .img-quienes-somos {
+          order: 1; }
+        section.quienes-somos img {
+          max-width: 500px; }
+        section.quienes-somos .item-derecha {
+          padding-left: 0rem; }
+        section.quienes-somos .item-izquierda {
+          padding-right: 0rem; } }
+    @media (max-width: 576px) {
+      section.quienes-somos {
+        margin: 0; } }
+
+article#diferencial {
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
+  article#diferencial p {
+    font-size: 0.9rem;
+    text-align: center; }
+  article#diferencial h4 {
+    font-size: 1.3rem; }
+
+article#quienes-somos {
+  background-color: #EFEBC8;
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
+  article#quienes-somos h1 {
+    margin-bottom: 2rem; }
+  article#quienes-somos h3 {
+    margin-bottom: 2rem; }
+
+article#capacitadores {
+  background-color: #EFEBC8;
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
