Dividí las secciones de la biblioteca

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -303,6 +303,9 @@ article{
         padding-top: 2rem;
         padding-bottom: 2rem;
     }
+    &.gestion-menstrual{
+        background-color: $gris-claro;
+    }
 }
 
 
