--- a/css/style.css
+++ b/css/style.css
@@ -236,3 +236,6 @@ article#capacitadores {
   background-color: #EFEBC8;
   padding-top: 2rem;
   padding-bottom: 2rem; }
+
+article.gestion-menstrual {
+  background-color: #EFEBC8; }
