--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+  margin-top: 7rem; }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Righteous", cursive;
   color: #E9725D;
@@ -6,10 +9,17 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   text-transform: uppercase; }
 
+h2 {
+  font-size: 2.5rem; }
+
 h3.frase {
   font-size: 3.5rem;
   text-align: center;
   margin: 1.5rem; }
+
+h4 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem; }
 
 p {
   font-family: "Raleway", sans-serif; }
@@ -66,49 +76,14 @@ div.valores {
     div.valores {
       display: block; } }
 
-div.valores-inf {
-  display: grid;
-  grid-template-columns: repeat(2, 30%);
-  justify-content: space-evenly; }
-  @media (max-width: 400px) {
-    div.valores-inf {
-      display: block; } }
-
 div.img-quienes-somos {
   text-align: center; }
 
-div.capacitadores {
-  display: grid;
-  grid-template-columns: repeat(8, auto); }
-  div.capacitadores p {
-    text-align: center;
-    font-size: 0.8rem; }
-  div.capacitadores h5 {
-    font-size: 1rem; }
-  div.capacitadores img {
-    border-radius: 50%; }
-  @media (max-width: 992px) {
-    div.capacitadores {
-      grid-template-columns: repeat(6, auto); } }
-  @media (max-width: 768px) {
-    div.capacitadores {
-      grid-template-columns: repeat(5, auto); } }
-  @media (max-width: 576px) {
-    div.capacitadores {
-      grid-template-columns: repeat(4, auto); } }
-  @media (max-width: 470px) {
-    div.capacitadores {
-      grid-template-columns: repeat(2, auto); } }
-  @media (max-width: 350px) {
-    div.capacitadores {
-      grid-template-columns: repeat(1, auto); } }
-
-div.img-capacitadores {
-  text-align: center; }
-
-@media (max-width: 371px) {
-  img.logo-navbar {
-    width: 150px; } }
+img.logo-navbar {
+  width: 250px; }
+  @media (max-width: 371px) {
+    img.logo-navbar {
+      width: 150px; } }
 
 img.redonda {
   border-radius: 50%; }
@@ -166,7 +141,7 @@ footer {
   footer h6 {
     color: #EFEBC8;
     text-transform: uppercase;
-    font-size: 2rem; }
+    font-size: 1.5rem; }
 
 main.proyectos {
   background-color: #EFEBC8;
@@ -233,11 +208,6 @@ article#quienes-somos {
     margin-bottom: 2rem; }
   article#quienes-somos h3 {
     margin-bottom: 2rem; }
-
-article#capacitadores {
-  background-color: #EFEBC8;
-  padding-top: 2rem;
-  padding-bottom: 2rem; }
 
 article.gestion-menstrual {
   background-color: #EFEBC8; }
