--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,10 @@ $blanco: #fff;
 $sub-destacada: 'Righteous', cursive;
 $general: 'Raleway', sans-serif;
 
+body{
+    margin-top: 7rem;
+}
+
 h1, h2, h3, h4, h5, h6{
     font-family: $sub-destacada;
     color: $primary;
@@ -21,12 +25,21 @@ h1{
     text-transform: uppercase;
 }
 
+h2{
+    font-size: 2.5rem;
+}
+
 h3{
     &.frase{
         font-size: 3.5rem;
         text-align: center;
         margin: 1.5rem;
     }
+}
+
+h4{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 
 p{
@@ -97,53 +110,14 @@ div{
             display: block;
         }
     }
-    &.valores-inf{
-        display: grid;
-        grid-template-columns: repeat(2, 30%);
-        justify-content: space-evenly;
-        @media (max-width:400px) {
-            display: block;
-        }
-    }
     &.img-quienes-somos{
-        text-align: center;
-    }
-    &.capacitadores{
-        display: grid;
-        grid-template-columns: repeat(8, auto);
-        p{
-            text-align: center;
-            font-size: 0.8rem;
-        }
-        h5{
-            font-size: 1rem;
-        }
-        img{
-            border-radius: 50%;
-        }
-        @media (max-width:992px){
-            grid-template-columns:repeat(6, auto);
-        }
-        @media (max-width:768px){
-            grid-template-columns:repeat(5, auto);
-        }
-        @media (max-width:576px){
-            grid-template-columns:repeat(4, auto);
-        }
-        @media (max-width:470px){
-            grid-template-columns:repeat(2, auto);
-        }
-        @media (max-width:350px){
-            grid-template-columns:repeat(1, auto);
-        }
-    }
-    &.img-capacitadores{
         text-align: center;
     }
 }
 
 img{
     &.logo-navbar{
+        width: 250px;
         @media (max-width:371px){
             width: 150px;
         }
@@ -211,7 +185,7 @@ footer{
     h6{
         color: $gris-claro;
         text-transform: uppercase;
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 }
 
@@ -301,11 +275,6 @@ article{
         h3{
             margin-bottom: 2rem;
         }
-    }
-    &#capacitadores{
-        background-color: $gris-claro;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
     }
     &.gestion-menstrual{
         background-color: $gris-claro;
