--- a/scss/style.scss
+++ b/scss/style.scss
@@ -115,6 +115,7 @@ div{
         height: 300px;
         background-image: url(../img/6.png);
         border-radius: 50%;
+        margin-top: 2rem;
         &:hover{
             div.img-info{
                 visibility: visible;
@@ -126,6 +127,7 @@ div{
         height: 300px;
         background-image: url(../img/7m.jpg);
         border-radius: 50%;
+        margin-top: 2rem;
         &:hover{
             div.img-info{
                 visibility: visible;
@@ -137,6 +139,7 @@ div{
         height: 300px;
         background-image: url(../img/8.jpg);
         border-radius: 50%;
+        margin-top: 2rem;
         &:hover{
             div.img-info{
                 visibility: visible;
