--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,6 +77,7 @@ li{
         border: solid;
         border-radius: 10px;
         height: 3rem;
+        width: 15rem;
         box-sizing: content-box;
         text-align: center;
         @media (max-width: 768px) {
