margin busquedas laborales

--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ div.img-info {
     padding-top: 45%; }
 
 div#busquedas-laborales {
+  margin-top: 9rem;
   display: flex;
   gap: 2rem; }
   @media (max-width: 768px) {
