--- a/scss/style.scss
+++ b/scss/style.scss
@@ -173,6 +173,7 @@ div{
         }
     }
     &#busquedas-laborales{
+        margin-top: 9rem;
         display: flex;
         gap: 2rem;
         @media (max-width:768px){
