--- a/scss/style.scss
+++ b/scss/style.scss
@@ -101,7 +101,6 @@ li{
 
 div{
     &.proyectos{
-        margin-top: 9rem;
         margin-bottom: 3rem;
         padding-top: 2rem;
         padding-bottom: 2rem;
@@ -270,6 +269,9 @@ main{
     &.prueba{
         height: 75vh;
     }
+    &.biblioteca{
+        margin-top: 9rem;
+    }
 }
 
 section{
@@ -324,6 +326,35 @@ section{
             margin: 0;
         }
     }
+    &.secciones{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        div{
+            margin-right: 1rem;
+            margin-bottom: 2rem;
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            background-color: $naranja;
+            text-align: center;
+            position: relative;
+            a{
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translateX(-50%) translateY(-50%);
+                color: $verde-oscuro;
+                text-transform: uppercase;
+                font-weight: 700;
+                &:hover{
+                    text-decoration: none;
+                    color: $verde-claro;
+                }
+            }
+            
+        }
+    }
 }
 
 article{
@@ -349,8 +380,37 @@ article{
             margin-bottom: 2rem;
         }
     }
+    &#etiquetado{
+        h3{
+            margin-top: 2rem;
+        }
+        ol{
+            font-family: $general;
+            margin-bottom: 2rem;
+            line-height: 2rem;
+        }
+    }
     &.gestion-menstrual{
         background-color: $gris-claro;
+        padding-top: 3rem;
+        padding-bottom: 2rem;
+        h3{
+            margin-top: 2rem;
+        }
+        ol{
+            font-family: $general;
+            line-height: 2rem;
+        }
+    }
+    &#accion-barrial{
+        padding-top: 3rem;
+        padding-bottom: 1rem;
+        h3{
+            margin-top: 2rem;
+        }
+        p{
+            line-height: 2rem;
+        }
     }
     &#logistica, &#recaudador-fondos, &#community-manager, &#editor-audiovisual, &#diseniador-grafico, &#asistente-twitter, &#investigador-politico{
         display: none;
