--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,14 @@ div.proyectos {
   padding-top: 2rem;
   padding-bottom: 2rem;
   display: flex; }
+  @media (max-width: 576px) {
+    div.proyectos {
+      display: block; } }
   div.proyectos .item1 {
     padding-right: 3rem; }
+    @media (max-width: 576px) {
+      div.proyectos .item1 {
+        padding-right: 0; } }
 
 div.img {
   text-align: center; }
@@ -140,6 +146,13 @@ div.libros {
   display: grid;
   grid-template-columns: repeat(3, 30%);
   justify-content: space-between; }
+  @media (max-width: 992px) {
+    div.libros {
+      grid-template-columns: repeat(2, auto);
+      column-gap: 1rem; } }
+  @media (max-width: 576px) {
+    div.libros {
+      display: block; } }
   div.libros section {
     text-align: center; }
     div.libros section > div {
@@ -152,25 +165,25 @@ img.logo-navbar {
     img.logo-navbar {
       width: 150px; } }
 
-@media (max-width: 575px) {
+@media (min-width: 993px) {
   img.proyectos {
-    max-width: 320px; } }
+    width: 960px; } }
 
-@media (max-width: 767px) {
+@media (max-width: 992px) {
   img.proyectos {
-    max-width: 540px; } }
+    width: 700px; } }
 
-@media (max-width: 991px) {
+@media (max-width: 768px) {
   img.proyectos {
-    max-width: 720px; } }
+    width: 500px; } }
 
-@media (max-width: 1199px) {
+@media (max-width: 576px) {
   img.proyectos {
-    max-width: 960px; } }
+    width: 420px; } }
 
-@media (min-width: 1200px) {
+@media (max-width: 420px) {
   img.proyectos {
-    max-width: 1140px; } }
+    width: 300px; } }
 
 nav {
   font-family: "Righteous", cursive;
