--- a/scss/style.scss
+++ b/scss/style.scss
@@ -105,8 +105,14 @@ div{
         padding-top: 2rem;
         padding-bottom: 2rem;
         display: flex;
+        @media (max-width:576px){
+            display: block;
+        }
         .item1{
             padding-right: 3rem;
+            @media (max-width:576px){
+                padding-right: 0;
+            }
         }
     }
     &.img{
@@ -187,6 +193,13 @@ div{
         display: grid;
         grid-template-columns: repeat(3, 30%);
         justify-content: space-between;
+        @media (max-width:992px){
+            grid-template-columns: repeat(2, auto);
+            column-gap: 1rem;
+        }
+        @media (max-width:576px){
+            display: block;
+        }
         section{
             text-align: center;
             &>div{
@@ -205,20 +218,20 @@ img{
         }
     }
     &.proyectos{
-        @media (max-width:575px) {
-            max-width: 320px;
+        @media (min-width:993px){
+            width: 960px;
         }
-        @media (max-width:767px) {
-            max-width: 540px;
+        @media (max-width:992px){
+            width: 700px;
         }
-        @media (max-width:991px) {
-            max-width: 720px;
+        @media (max-width:768px){
+            width: 500px;
         }
-        @media (max-width:1199px) {
-            max-width: 960px;
+        @media (max-width:576px){
+            width: 420px;
         }
-        @media (min-width:1200px) {
-            max-width: 1140px;
+        @media (max-width:420px){
+            width: 300px;
         }
     }
 }
