--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@ h3.frase {
   font-size: 3.5rem;
   text-align: center;
   margin: 1.5rem; }
+  @media (max-width: 768px) {
+    h3.frase {
+      font-size: 2.5rem; } }
+  @media (max-width: 576px) {
+    h3.frase {
+      font-size: 2rem; } }
 
 h4 {
   padding-top: 0.5rem;
