--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,12 @@ h3{
         font-size: 3.5rem;
         text-align: center;
         margin: 1.5rem;
+        @media (max-width:768px){
+            font-size: 2.5rem;
+        }
+        @media (max-width:576px){
+            font-size: 2rem;
+        }
     }
 }
 
