--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,24 @@ a {
     a.busqueda:hover {
       text-decoration: none;
       color: #E9725D; }
+  a.dona {
+    background-color: #EFEBC8;
+    border-radius: 10px;
+    border: solid;
+    padding: 0.5rem;
+    margin-top: 2rem; }
+    a.dona:hover {
+      text-decoration: none; }
+  a.sumate {
+    background-color: #EFEBC8;
+    border-radius: 10px;
+    border: solid;
+    padding: 0.5rem;
+    margin-top: 2rem;
+    color: #5D8B80; }
+    a.sumate:hover {
+      text-decoration: none;
+      color: #E9725D; }
 
 ul.trabajo {
   list-style-type: none;
@@ -224,9 +242,6 @@ main.proyectos {
   background-color: #EFEBC8;
   color: #E9725D; }
 
-main.prueba {
-  height: 75vh; }
-
 main.biblioteca {
   margin-top: 9rem; }
 
@@ -344,3 +359,27 @@ article#logistica, article#recaudador-fondos, article#community-manager, article
 
 article#libros h2, article#libros h4 {
   text-transform: uppercase; }
+
+article#dona {
+  background-color: #E9725D;
+  text-align: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem; }
+  article#dona h3 {
+    color: #EFEBC8;
+    padding-top: 2rem;
+    font-size: 3rem; }
+  article#dona p {
+    color: #EFEBC8; }
+
+article#sumate {
+  text-align: center;
+  color: #5D8B80;
+  padding-top: 10rem;
+  padding-bottom: 10rem; }
+  article#sumate h3 {
+    color: #5D8B80;
+    font-size: 3rem;
+    margin-bottom: 2rem; }
+  article#sumate p {
+    margin-bottom: 2rem; }
