--- a/css/style.css
+++ b/css/style.css
@@ -44,17 +44,17 @@ a {
       text-decoration: none;
       color: #E9725D; }
   a.dona {
+    font-family: "Righteous", cursive;
     background-color: #EFEBC8;
     border-radius: 10px;
-    border: solid;
     padding: 0.5rem;
     margin-top: 2rem; }
     a.dona:hover {
       text-decoration: none; }
   a.sumate {
+    font-family: "Righteous", cursive;
     background-color: #EFEBC8;
     border-radius: 10px;
-    border: solid;
     padding: 0.5rem;
     margin-top: 2rem;
     color: #5D8B80; }
