--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,12 +116,13 @@ li{
 }
 
 div{
-    &.proyectos{
+    &.proyectos, &.busquedas{
         margin-bottom: 3rem;
         padding-top: 2rem;
         padding-bottom: 2rem;
         display: flex;
         @media (max-width:576px){
+            text-align: center;
             display: block;
         }
         .item1{
@@ -197,44 +198,61 @@ div{
             padding-top: 45%;
         }
     }
-    &.libro1{
-        width: 300px;
-        height: 400px;
-        background-image: url(../img/libros/1.jpeg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        border-radius: 10px;
-        &:hover{
-            div.info-libro1{
-                visibility: visible;
+    $libros:libro1, libro2, libro3, libro4, libro5, libro6, libro7, libro8, libro9, libro10, libro11, libro12, libro13, libro14, libro15, libro16, libro17, libro18, libro19, libro20, libro21, libro22, libro23, libro24, libro25, libro26, libro27, libro28, libro29, libro30, libro31, libro32, libro33, libro34, libro35, libro36;
+    @each $libro in $libros {
+        &.#{$libro}{
+            width: 300px;
+            height: 450px;
+            background-image: url(../img/libros/#{$libro}.jpeg);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            &:hover{
+                div.info-#{$libro}{
+                    visibility: visible;
+                }
+                p{
+                    color: $gris-claro;
+                }
             }
         }
+        &.info-#{$libro}{
+            width: 300px;
+            height: 450px;
+            background-color: $azul;
+            border-radius: 10px;
+            visibility: hidden;
+            }
     }
-    &.info-libro1{
-        width: 300px;
-        height: 400px;
-        background-color: $azul;
-        border-radius: 10px;
-        visibility: hidden;
+    &.info-libro4, &.info-libro7, &.info-libro24, &.info-libro32, &.info-libro33{
+        height: 575px;
+    }
+    &.info-libro36{
+        height: 650px;
     }
     &#busquedas-laborales{
-        margin-top: 9rem;
         display: flex;
+        h3, h4, h5{
+            color: $gris-claro;
+        }
         @media (max-width:768px){
             display: block;
         }
     }
     &.libros{
         display: grid;
-        grid-template-columns: repeat(3, 30%);
-        justify-content: space-between;
+        grid-template-columns: repeat(3, 27%);
+        justify-content: space-around;
         @media (max-width:992px){
             grid-template-columns: repeat(2, auto);
             column-gap: 1rem;
         }
         @media (max-width:576px){
             display: block;
+            padding-left: 4.5rem;
+            h3{
+                padding-right: 4.5rem;
+            }
         }
         section{
             text-align: center;
@@ -243,6 +261,13 @@ div{
                 margin-bottom: 1rem;
                 /* padding: 2rem 1rem 2rem 1rem; */
             }
+        }
+    }
+    &.secciones-biblioteca{
+        background-color: $primary;
+        padding: 1rem 0;
+        h2{
+            color: $gris-claro;
         }
     }
 }
@@ -315,12 +340,22 @@ footer{
 }
 
 main{
-    &.proyectos{
-        background-color: $gris-claro;
-        color: $primary;
+    &.proyectos, &.busquedas{
+        background-color: $verde-oscuro;
+        color: $gris-claro;
+        h2{
+            color: $gris-claro;
+        }
     }
     &.biblioteca{
         margin-top: 9rem;
+        background-color: $primary;
+        padding: 1.5rem 0;
+        margin-bottom: 2rem;
+        p, h1{
+            color: $gris-claro;
+            text-align: center;
+        }
     }
 }
 
@@ -374,35 +409,6 @@ section{
         }
         @media (max-width:576px){
             margin: 0;
-        }
-    }
-    &.secciones{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        div{
-            margin-right: 1rem;
-            margin-bottom: 2rem;
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-            background-color: $naranja;
-            text-align: center;
-            position: relative;
-            a{
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translateX(-50%) translateY(-50%);
-                color: $verde-oscuro;
-                text-transform: uppercase;
-                font-weight: 700;
-                &:hover{
-                    text-decoration: none;
-                    color: $verde-claro;
-                }
-            }
-            
         }
     }
 }
@@ -564,6 +570,7 @@ article{
     }
 }
 
+@import "carrousel-biblioteca.scss";
 
 
 
